Fix SQL editor's alignment in rtl

--- a/public/themes/bootstrap/scss/_codemirror.scss
+++ b/public/themes/bootstrap/scss/_codemirror.scss
@@ -3,7 +3,10 @@ $textarea-rows: 15;
 
 .CodeMirror {
   height: 20rem;
+  /*rtl:begin:ignore*/
   direction: ltr;
+  text-align: left;
+  /*rtl:end:ignore*/
   border: $card-border-width solid $card-border-color;
   background-color: var(--#{$prefix}body-bg);
   color: var(--#{$prefix}body-color);
